element alignment fixed

--- a/src/blocks/checkbox/checkbox.scss
+++ b/src/blocks/checkbox/checkbox.scss
@@ -2,7 +2,7 @@
 
 .checkbox{
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   &__button{
     --opacity: 0;
     position: relative;
@@ -57,7 +57,6 @@
     font-size: 14px;
     line-height: 18px;
     color: $dark-50;
-    vertical-align: center;
 
     &_bold{
       font-family: Montserrat;
